# rust-jwt

./: .gitignore  Cargo.toml  README.md
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/base64/: enum.CharacterSet.html  enum.DecodeError.html  struct.Config.html
doc/block_buffer/: struct.BlockBuffer.html
doc/block_padding/: enum.AnsiX923.html  enum.Iso7816.html  enum.NoPadding.html  enum.Pkcs7.html  enum.ZeroPadding.html  struct.PadError.html  struct.UnpadError.html  trait.Padding.html
doc/crypto/: index.html  sidebar-items.js  stability.html  stability.json
doc/crypto_mac/: all.html  index.html  struct.InvalidKeyLength.html  struct.MacError.html  struct.MacResult.html  trait.Mac.html
doc/digest/: struct.InvalidOutputSize.html  trait.BlockInput.html  trait.Digest.html  trait.DynDigest.html  trait.ExtendableOutput.html  trait.FixedOutput.html  trait.Input.html  trait.Reset.html  trait.VariableOutput.html  trait.XofReader.html
doc/fake_simd/: struct.u32x4.html  struct.u64x2.html
doc/generic_array/: struct.GenericArray.html
doc/hex/: enum.FromHexError.html
doc/hmac/: all.html  index.html  struct.Hmac.html  trait.Mac.html
doc/jwt/: all.html  index.html  sidebar-items.js  stability.html  stability.json  struct.Token.html  trait.Component.html  trait.FromBase64.html  trait.SignWithKey.html  trait.ToBase64.html  trait.VerifyWithKey.html
doc/libc/: all.html  constant.AF_APPLETALK.html  constant.AF_CCITT.html  constant.AF_CHAOS.html  constant.AF_CNT.html  constant.AF_COIP.html  constant.AF_DATAKIT.html  constant.AF_DECnet.html  constant.AF_DLI.html  constant.AF_E164.html  constant.AF_ECMA.html  constant.AF_HYLINK.html  constant.AF_IMPLINK.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  constant.AF_ISDN.html  constant.AF_ISO.html  constant.AF_LAT.html  constant.AF_LINK.html  constant.AF_LOCAL.html  constant.AF_NATM.html  constant.AF_NETBIOS.html  constant.AF_NS.html  constant.AF_OSI.html  constant.AF_PPP.html  constant.AF_PUP.html  constant.AF_ROUTE.html  constant.AF_SIP.html  constant.AF_SNA.html  constant.AF_SYSTEM.html  constant.AF_SYS_CONTROL.html  constant.AF_UNIX.html  constant.AF_UNSPEC.html  constant.B0.html  constant.B110.html  constant.B115200.html  constant.B1200.html  constant.B134.html  constant.B14400.html  (+1407 more)
doc/openssl_sys/: all.html  constant.OCSP_NOCASIGN.html  (+180 more)
examples/: custom_claims.rs  hs256.rs  hs256_legacy.rs  privateKey.pem  publicKey.pub  rs256.rs
src/: claims.rs  crypt.rs  error.rs  header.rs  lib.rs  signature.rs
test/: eddsa-private.pem  eddsa-public.pem  es256-private.pem  private_rsa.pem  rs256-private.pem
(+8228 files in other folders)
