[package]
name = "jwt"
version = "0.11.0"
authors = ["Michael Yang <mikkyangg@gmail.com>"]
description = "JSON Web Token library"
documentation = "https://docs.rs/jwt"
homepage = "http://github.com/mikkyang/rust-jwt"
repository = "http://github.com/mikkyang/rust-jwt"
readme = "README.md"
keywords = ["JWT", "token", "web"]
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
features = ["openssl"]

[dependencies]
base64 = "0.12"
crypto-mac = "0.9"
digest = "0.9"
hmac = "0.9"
sha2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.openssl]
version = "0.10"
optional = true

[dev-dependencies]
doc-comment = "0.3"
