[package]
name = "jwt"
version = "0.16.0"
authors = ["Michael Yang <mikkyangg@gmail.com>"]
description = "JSON Web Token library"
documentation = "https://docs.rs/jwt"
homepage = "http://github.com/mikkyang/rust-jwt"
repository = "http://github.com/mikkyang/rust-jwt"
readme = "README.md"
keywords = ["JWT", "token", "web"]
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
features = ["openssl"]

[dependencies]
base64 = "0.13"
crypto-common = "0.1"
digest = "0.10"
hmac = { version = "0.12", features = ["reset"] }
sha2 = { version = "0.10" , features = ["oid"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
p256 = "0.13"
p384 = "0.13"
p521 = "0.13"
rsa = "0.9"
signature = "2.1"


[dependencies.openssl]
version = "0.10"
optional = true

[dev-dependencies]
doc-comment = "0.3"
