[package]
name = "jwt"
version = "0.16.0"
authors = ["Michael Yang <mikkyangg@gmail.com>"]
description = "JSON Web Token library"
documentation = "https://docs.rs/jwt"
homepage = "http://github.com/mikkyang/rust-jwt"
repository = "http://github.com/mikkyang/rust-jwt"
readme = "README.md"
keywords = ["JWT", "token", "web"]
license = "MIT"
edition = "2021"

[features]
openssl = ["dep:openssl"]
openssl-vendored = ["openssl", "openssl/vendored"]
default = []

[dependencies]
base64 = "0.21"
crypto-common = "0.1"
digest = { version = "0.10", features = ["oid"] }
signature = { version = "2.2", features = ["digest"] }
hmac = { version = "0.12", features = ["reset"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ecdsa = { version = "0.16", features = ["verifying", "signing"] }
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["pem"] }
pem = "3.0"

[dependencies.openssl]
version = "0.10"
optional = true

[dev-dependencies]
doc-comment = "0.3"
